--- a/hw1/rob831/scripts/run_hw1.ipynb
+++ b/hw1/rob831/scripts/run_hw1.ipynb
@@ -11,7 +11,7 @@
    "source": [
     "##Setup\n",
     "\n",
-    "You can do so with **File &rarr; Save a copy in Drive**. Please run on GPU: Runtime -> Change runtime type -> Hardware accelerator -> T4 GPU"
+    "You will need to make a copy of this notebook in your Google Drive before you can edit the homework files. You can do so with **File &rarr; Save a copy in Drive**. Please run on GPU: Runtime -> Change runtime type -> Hardware accelerator -> T4 GPU"
    ]
   },
   {
